# classical-mechanics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 0-free-particle.ipynb  1-particle-central-potential.ipynb  2-particle-dome-paradox.ipynb  3-double-pendulum.ipynb  4-charged-particle-in-magnetic-field.ipynb
src/classical_mechanics/: __init__.py
tests/: test_dummy.py
