[project]
name = "classical-mechanics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eschmidt42", email = "11818904+eschmidt42@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "diffrax>=0.7.0",
    "gif>=23.3.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "polars>=1.30.0",
    "pytest>=8.4.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "torch>=2.7.1",
]

[project.scripts]
classical-mechanics = "classical_mechanics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "notebook>=7.4.3",
    "pre-commit>=4.2.0",
]
